# quantization-adalora-speech-recognition

./: .gitignore  README.md  download_job_output.ipynb  main.py  pyproject.toml  run_in_cloud.ipynb
azure_env/: conda.yml
scripts/: adalora_train_and_evaluate.py  create_training_graph.ipynb  dataset.ipynb  dataset.py  evaluate_base.py  example_common_voice.py  merge_adapter.py  onnx_eval_pipeline.py  test.py  test_onnx_local.py  test_size.py
src/: cli.py  cuda.py
src/dataset/: dataset.py
src/evaluation/: evaluate.py  evaluate_onnx.py
src/models/: loading.py  lora.py  quantization.py
src/quantization/: onnx_quantize.py
src/training/: collator.py  lora_config.py  train.py  trainer.py
src/utils/: logging.py  model.py
