[project]
name = "quantization-adalora-speech-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    # base
    "torch==2.10.0",
    "torchcodec==0.10.0",
    # model and training
    "transformers",
    "accelerate",
    "datasets",
    "peft",
    "jiwer",
    "bitsandbytes",
    # cpu eval + quantization
    "optimum[onnxruntime]",
    "onnx",
    # dep
    "numpy",
    "python-dotenv",
    "azure-ai-ml",
    "azure-identity",
    "onnx-ir>=0.2.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
]
